--- a/ckanext/sparql/templates/ckanext/sparql/index.html
+++ b/ckanext/sparql/templates/ckanext/sparql/index.html
@@ -567,7 +567,7 @@ function create_data(){
   <link rel="stylesheet" href="/recline/timeline.css">
 
 
- <!--script src="/recline/slickgrid/2.0.1/jquery-1.7.min.js"></script!-->
+  <script src="/recline/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/recline/underscore.js"></script>
   <script type="text/javascript" src="/recline/backbone.js"></script>
   <script type="text/javascript" src="/recline/mustache.js"></script>
@@ -595,6 +595,7 @@ function create_data(){
 
 
   <script type="text/javascript" src="/recline/moment.js"></script>
+
   <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script!-->
 
   <!--script type="text/javascript" src="/recline/timeline/js/timeline.js"></script-->
