--- a/ckanext/sparql/templates/ckanext/sparql/query.html
+++ b/ckanext/sparql/templates/ckanext/sparql/query.html
@@ -96,12 +96,12 @@
                   var dict = {};
                   for(var j = 0; j < vars.length; j++){
                     
-                    dict[String("_"+vars[j]["id"])]= x.results.bindings[i][vars[j]["id"]]["value"];
+                    dict[String(" "+vars[j]["id"])]= x.results.bindings[i][vars[j]["id"]]["value"];
                   }
                   records.push(dict);
                 }
                 for(var i = 0; i <vars.length; i++){
-                    vars[i].id = "_"+vars[i].id
+                    vars[i].id = " "+vars[i].id
                 }
                 data_from_json = {records:records, fields:vars};
                 if($(".recline-data-explorer").length > 0){
@@ -118,11 +118,11 @@
               
              
                   var rem = document.getElementsByClassName('slick-column-name')
-                  for(var i = 0; i < rem.length; i++){
-                    rem[i].innerHTML = rem[i].innerHTML.substring(1, rem[i].innerHTML.length)
+                  //for(var i = 0; i < rem.length; i++){
+                    //rem[i].innerHTML = rem[i].innerHTML.substring(1, rem[i].innerHTML.length)
                   $("#showdata").hide();
                   $("#updatedata").show();
-              }
+              
              
 
               }
