--- a/ckanext/sparql/templates/ckanext/sparql/index.html
+++ b/ckanext/sparql/templates/ckanext/sparql/index.html
@@ -567,7 +567,7 @@ function create_data(){
   <link rel="stylesheet" href="/recline/timeline.css">
 
 
-  <script src="/recline/jquery-1.7.min.js"></script>
+ <script src="/recline/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/recline/underscore.js"></script>
   <script type="text/javascript" src="/recline/backbone.js"></script>
   <script type="text/javascript" src="/recline/mustache.js"></script>
@@ -595,10 +595,9 @@ function create_data(){
 
 
   <script type="text/javascript" src="/recline/moment.js"></script>
-
   <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script!-->
 
-  <!--script type="text/javascript" src="/recline/timeline/js/timeline.js"></script-->
+  <!--script type="text/javascript" src="/recline/timeline/js/timeline.js"></script!-->
   <!--[if lte IE 7]>
   <script language="javascript" type="text/javascript" src="../json/json2.js"></script>
   <![endif]-->
@@ -653,14 +652,19 @@ function create_data(){
   
   <script type="text/javascript">
   
-    $(document).ready(function(){
+    //$(document).ready(function(){
     var sparql_query = GetURLParameter('view_code');
     if (sparql_query != "" && sparql_query != undefined) {
       editor.setValue(decodeURIComponent((sparql_query+'').replace(/\+/g, '%20')));
     }
-  });
+    var sparql_gr_uri = GetURLParameter('default-graph-uri');
+    if (sparql_gr_uri != "" && sparql_gr_uri != undefined) {
+      $("#field-sparql-server").val(sparql_gr_uri)
+    }
+    //
+  //});
   
   </script>
 
-  
+
 {% endblock %}
