--- a/ckanext/sparql/templates/ckanext/sparql/index.html
+++ b/ckanext/sparql/templates/ckanext/sparql/index.html
@@ -339,7 +339,7 @@ function genQuery(){
           var obj = $("#object").val();
 
           if(obj!= "")
-            query+= "?"+level+" FILTER REGEX(str(?"+level+",'"+obj+"').\n"
+            query+= "?"+level+" FILTER REGEX(str(?"+level+"),'"+obj+"').\n"
           else
             query+="?"+level+" .\n"
           level += 1;
